// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`crm/contacts/hubspot Create should perform successfully 1`] = `
Object {
  "value": Object {
    "id": "601",
  },
}
`;

exports[`crm/contacts/hubspot Update should perform successfully 1`] = `
Object {
  "value": Object {
    "id": "401",
  },
}
`;

exports[`crm/contacts/hubspot Update should return error if id is missing 1`] = `
Object {
  "error": "HTTPError: Expected HTTP error
AST Path: definitions[1].statements[0]
Original Map Location: Line 52, column 3",
}
`;
